--- a/bloodadmin/package.json
+++ b/bloodadmin/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toasted": "^1.1.28",
