--- a/bloodadmin/package.json
+++ b/bloodadmin/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.8.2",
     "mosha-vue-toastify": "^1.0.23",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vue-toasted": "^1.1.28",
